Agregué estilos css

--- a/index.html
+++ b/index.html
@@ -5,19 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, inital-scale=1.9">
     <title>MI tarjeta</title>
-    
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <div>
-        <img src="xxxxxx alt=foto de perfil">
+    <div class="card">
+        <img src="foto.jpg" alt="foto de perfil">
         <h1>joseph nicolas torres</h1>
-        <p>Desarrolo de wed en aprendizaje 👌</p>
-        <div>
-            <a href="https://www.roblox.com/es/users/8112952611/profile"target="_blank">Roblox</a>
-             <a href="https://github.com/josephnicolastorres6-web"target="_blank">Githud</a>
-              <a href="xxxxxxxxxxxxxxxx"target="_blank">xxxxxxx</a>
+        <p>Desarrollo wed en aprendisaje 👌</p>
+        <div class="buttons">
+            <a href="https://www.roblox.com/es/users/8112952611/profile" target="_blank">Roblox</a>
+            <a href="https://github.com/josephnicolastorres6-web" target="_blank">Githud</a>
         </div>
     </div>
 </body>
+
 </html>
